--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -11,13 +11,11 @@
   },
   "author": "Tapio Siitonen",
   "license": "MIT",
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1"
   }
 }
