Add solution to exercise 3.22

--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "build:ui": "@powershell Remove-Item -Recurse -Force build && cd ../../part2/phonebook && @powershell Remove-Item -Recurse -Force build && npm run build && @powershell Copy-Item build -Recurse ../../part3/phonebook",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "Tapio Siitonen",
   "license": "MIT",
@@ -17,5 +18,8 @@
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.48.0"
   }
 }
