--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^4.10.0",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "mongoose-unique-validator": "^4.0.0"
   },
