--- a/part9/ts-exercises/package.json
+++ b/part9/ts-exercises/package.json
@@ -6,13 +6,20 @@
   "scripts": {
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
+    "dev": "ts-node-dev index.ts",
+    "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ts-node": "ts-node"
   },
   "author": "Tapio Siitonen",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
