--- a/part9/ts-exercises/package.json
+++ b/part9/ts-exercises/package.json
@@ -7,6 +7,7 @@
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
     "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts .",
     "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ts-node": "ts-node"
@@ -15,6 +16,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
